--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="865799124542-dug3gkgc0h8c2bmt5pvjp74d6hkvpeg9.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+    <!-- jQuery script source -->
+    <script src="jquery-3.4.1.min.js"></script>
+
+    <!-- JS script -->
+    <script src="script.js"></script>
+
   </head>
   <body>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
