added client-side scripts

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
-    <!-- jQuery script source -->
-    <script src="jquery-3.4.1.min.js"></script>
+    <!-- jQuery library-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- JS script -->
     <script src="script.js"></script>
